@@ -10,6 +10,7 @@
 #include "UIGlobals.hpp"
 #include "Look/Look.hpp"
 #include "Renderer/ClimbPercentRenderer.hpp"
+#include "Input/InputEvents.hpp"
 
 #include <tchar.h>
 
@@ -252,6 +253,13 @@ InfoBoxContentThermalAssistant::OnCustomPaint(Canvas &canvas,
 {
   renderer.UpdateLayout(rc);
   renderer.Paint(canvas);
+}
+
+bool
+InfoBoxContentThermalAssistant::HandleClick() noexcept
+{
+  InputEvents::eventThermalAssistant(_T(""));
+  return true;
 }
 
 void
