@@ -60,6 +60,7 @@ public:
 
   void Update(InfoBoxData &data) noexcept override;
   void OnCustomPaint(Canvas &canvas, const PixelRect &rc) noexcept override;
+  bool HandleClick() noexcept override;
 };
 
 class InfoBoxContentClimbPercent : public InfoBoxContent
