@@ -45,6 +45,7 @@ Version 7.44 - not yet released
   - show squawk code in airspace details dialog
   - ability to send squawk code from airspace details dialog to transponder
   - add support for a dedicated north-up map page layout
+  - the thermal assistant InfoBox is now clickable
 * Android
   - fix crash on startup when loading icons on ldpi screens
   - update 'white list' of USB devices with one more VID/PID pair for SoftRF Academy
